--- a/contact.html
+++ b/contact.html
@@ -1,75 +1,31 @@
 <!doctype html>
-
-<html lang="zxx">
-
-
-
+<html>
 <head>
-
-	<!-- Required meta tags -->
-
-	<meta charset="utf-8">
-
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-	<!-- Title -->
-
-	<title>Mega Pipelines - Unlimited Sales Leads to Boost Lead Generation</title>
-
+    <meta charset="utf-8">
+    <meta name="robots" content="index, follow">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <meta name="autor" content="Mega Pipelines">
     <meta name="keywords" content="mortgage, leads, unlimited, refinance, solar, sales, loans, pipeline">
     <meta name="description" content="Mega Pipelines is the best sales resource, providing unlimited sales leads for mortgage, solar, insurance and home services.  Why pay per opportunity when you can have unlimited sales at your fingertips.">
     <link rel="canonical" href="https://megapipelines.com/">
+    <link rel="icon" type="image/ico" href="assets/img/favicon.ico">
+    <title>Contact Us</title>
     <meta property="og:url" content="https://megapipelines.com/">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Mega Pipelines">
-    <meta property="og:title" content="Unlimited Sales Leads to Boost Lead Generation">
+    <meta property="og:title" content="Contact Us">
     <meta property="og:description" content="Mega Pipelines is the best sales resource, providing unlimited sales leads for mortgage, solar, insurance and home services.  Why pay per opportunity when you can have unlimited sales at your fingertips.">
     <meta property="og:image" content="">
-
-
-	<!-- Google Fonts -->
-
 	<link href="https://fonts.googleapis.com/css2?family=Cabin:wght@400;500;600;700&display=swap" rel="stylesheet">
-
-	<!-- Favicon -->
-
-	<link rel="icon" type="image/png" href="assets/img/favicon.png">
-
-	<!-- Bootstrap Min CSS -->
-
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
-
-	<!-- Animate Min CSS -->
-
 	<link rel="stylesheet" href="assets/css/animate.min.css">
-
-	<!-- FlatIcon CSS -->
-
 	<link rel="stylesheet" href="assets/css/pe-icon-7-stroke.css">
-
-	<!-- Font Awesome Min CSS -->
-
 	<link rel="stylesheet" href="assets/css/fontawesome.min.css">
-
-	<!-- Mran Menu CSS -->
-
 	<link rel="stylesheet" href="assets/css/meanmenu.css">
-
-	<!-- Owl Carousel Min CSS -->
-
 	<link rel="stylesheet" href="assets/css/owl.carousel.min.css">
-
-	<!-- Style CSS -->
-
 	<link rel="stylesheet" href="assets/css/style.css">
-
-	<!-- Responsive CSS -->
-
 	<link rel="stylesheet" href="assets/css/responsive.css">
-
 </head>
-
-
 
 <body>
 
@@ -109,7 +65,7 @@
 
 	<div class="navbar-area">
 
-		<div class="techmax-responsive-nav index-navber-responsive">
+		<div class="techmax-responsive-nav">
 
 			<div class="container">
 
@@ -119,7 +75,7 @@
 
 						<a href="index.html">
 
-							<img src="assets/img/logo-black.png" class="white-logo" alt="logo">
+							<img src="assets/img/logo.png" class="white-logo" alt="logo">
 
 							<img src="assets/img/logo-black.png" class="black-logo" alt="logo">
 
@@ -133,7 +89,7 @@
 
 		</div>
 
-		<div class="techmax-nav index-navber">
+		<div class="techmax-nav">
 
 			<div class="container">
 
@@ -141,13 +97,13 @@
 
 					<a class="navbar-brand" href="index.html">
 
-						<img src="assets/img/logo-black.png" class="white-logo" alt="logo">
+						<img src="assets/img/logo.png" class="white-logo" alt="logo">
 
 						<img src="assets/img/logo-black.png" class="black-logo" alt="logo">
 
 					</a>
 
-					<div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
+					<div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent" style="display: block;">
 
 						<ul class="navbar-nav">
 
@@ -239,12 +195,12 @@
 
 						</ul>
 
-						<div class="other-option" style="display: flex; gap: 20px;">
+						<div class="other-option">
 
 
 							<div class="nav-item">
 
-								<a href="faq.html" class="nav-link">Log In</a>
+								<a href="faq.html" class="nav-link" style="color: #fff">Log In</a>
 
 							</div>
 
