--- a/index.html
+++ b/index.html
@@ -1,72 +1,30 @@
 <!doctype html>
-
-<html lang="zxx">
-
-
-
+<html>
 <head>
-
-	<!-- Required meta tags -->
-
-	<meta charset="utf-8">
-
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-	<!-- Title -->
-
-	<title>Mega Pipelines LLC</title>
-
-
+    <meta charset="utf-8">
+    <meta name="robots" content="index, follow">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <meta name="autor" content="Mega Pipelines">
     <meta name="keywords" content="mortgage, leads, unlimited, refinance, solar, sales, loans, pipeline">
     <meta name="description" content="Mega Pipelines is the best sales resource, providing unlimited sales leads for mortgage, solar, insurance and home services.  Why pay per opportunity when you can have unlimited sales at your fingertips.">
     <link rel="canonical" href="https://megapipelines.com/">
+    <link rel="icon" type="image/ico" href="assets/img/favicon.ico">
+    <title>Mega Pipelines</title>
     <meta property="og:url" content="https://megapipelines.com/">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Mega Pipelines">
     <meta property="og:title" content="Unlimited Sales Leads to Boost Lead Generation">
     <meta property="og:description" content="Mega Pipelines is the best sales resource, providing unlimited sales leads for mortgage, solar, insurance and home services.  Why pay per opportunity when you can have unlimited sales at your fingertips.">
     <meta property="og:image" content="">
-
-	<!-- Google Fonts -->
-
 	<link href="https://fonts.googleapis.com/css2?family=Cabin:wght@400;500;600;700&display=swap" rel="stylesheet">
-
-	<!-- Favicon -->
-
-	<link rel="icon" type="image/png" href="assets/img/favicon.png">
-
-	<!-- Bootstrap Min CSS -->
-
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
-
-	<!-- Animate Min CSS -->
-
 	<link rel="stylesheet" href="assets/css/animate.min.css">
-
-	<!-- Pe-icon-7 CSS -->
-
 	<link rel="stylesheet" href="assets/css/pe-icon-7-stroke.css">
-
-	<!-- Font Awesome Min CSS -->
-
 	<link rel="stylesheet" href="assets/css/fontawesome.min.css">
-
-	<!-- Mran Menu CSS -->
-
 	<link rel="stylesheet" href="assets/css/meanmenu.css">
-
-	<!-- Owl Carousel Min CSS -->
-
 	<link rel="stylesheet" href="assets/css/owl.carousel.min.css">
-
-	<!-- Style CSS -->
-
 	<link rel="stylesheet" href="assets/css/style.css">
-
-	<!-- Responsive CSS -->
-
 	<link rel="stylesheet" href="assets/css/responsive.css">
-
 </head>
 
 
