--- a/contact.html
+++ b/contact.html
@@ -26,199 +26,105 @@
 	<link rel="stylesheet" href="assets/css/style.css">
 	<link rel="stylesheet" href="assets/css/responsive.css">
 </head>
-
 <body>
-
-
-
-	<!-- Start Preloader Area -->
-
 	<div class="preloader">
-
 		<div class="d-table">
-
 			<div class="d-table-cell">
-
-			<div class="lds-spinner">
-
-				<div></div><div></div><div></div>
-
-				<div></div><div></div><div></div>
-
-				<div></div><div></div><div></div>
-
-				<div></div><div></div><div></div>
-
-			</div>
-
-			</div>
-
-		</div>
-
-	</div>
-
-	<!-- End Preloader Area -->
-
-	
-
-	<!-- Start Navbar Area -->
-
-	<div class="navbar-area">
-
-		<div class="techmax-responsive-nav">
-
-			<div class="container">
-
-				<div class="techmax-responsive-menu">
-
-					<div class="logo">
-
-						<a href="index.html">
-
-							<img src="assets/img/logo.png" class="white-logo" alt="logo">
-
-							<img src="assets/img/logo-black.png" class="black-logo" alt="logo">
-
-						</a>
-
-					</div>
-
+				<div class="lds-spinner">
+					<div></div><div></div><div></div>
+					<div></div><div></div><div></div>
+					<div></div><div></div><div></div>
+					<div></div><div></div><div></div>
 				</div>
-
 			</div>
-
 		</div>
-
-		<div class="techmax-nav">
-
-			<div class="container">
-
-				<nav class="navbar navbar-expand-md navbar-light">
-
-					<a class="navbar-brand" href="index.html">
-
-						<img src="assets/img/logo.png" class="white-logo" alt="logo">
-
-						<img src="assets/img/logo-black.png" class="black-logo" alt="logo">
-
-					</a>
-
-					<div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent" style="display: block;">
-
-						<ul class="navbar-nav">
-
-							<li class="nav-item"> 
-
-								<a href="index.html" class="nav-link">Product</a>
-
-							</li>
-
-							<li class="nav-item">
-
-								<a href="about.html" class="nav-link">Pricing</a>
-
-							</li>
-
-							<li class="nav-item">
-
-								<a href="about.html" class="nav-link">Company</a>
-
-							</li>
-
-
-							<li class="nav-item">
-
-								<a href="#" class="nav-link">Industries  <i class="fas fa-chevron-down"></i></a>
-
-								<ul class="dropdown-menu">
-
-									<li class="nav-item"> 
-
-										<a href="services.html" class="nav-link">Mortgage</a>
-
-									</li>
-
-
-									<li class="nav-item"> 
-
-										<a href="services.html" class="nav-link">Solar</a>
-
-									</li>
-
-									<li class="nav-item"> 
-
-										<a href="services.html" class="nav-link">Homeowners Insurance</a>
-
-									</li>
-
-
-									<li class="nav-item"> 
-
-										<a href="services.html" class="nav-link">Real Estate</a>
-
-									</li>
-
-								</ul>
-
-							</li>
-
-							<li class="nav-item"> 
-
-								<a href="#" class="nav-link">Resources <i class="fas fa-chevron-down"></i></a>
-
-								<ul class="dropdown-menu">
-
-									<li class="nav-item">
-
-										<a href="projects.html" class="nav-link">Tutorials</a>
-
-									</li>
-
-
-
-									<li class="nav-item">
-
-										<a href="pricing.html" class="nav-link">Best Practices</a>
-
-									</li>
-
-									<li class="nav-item">
-
-										<a href="faq.html" class="nav-link">FAQs</a>
-
-									</li>
-
-								</ul>
-
-							</li>
-
-
-						</ul>
-
-						<div class="other-option">
-
-
-							<div class="nav-item">
-
-								<a href="faq.html" class="nav-link" style="color: #fff">Log In</a>
-
-							</div>
-
-							<a class="default-btn" href="#0">Register <span></span></a>
-
-						</div>
-
-					</div>
-
-				</nav>
-
-			</div>
-
-		</div>
-
 	</div>
-
-	<!-- End Navbar Area -->
+	<div class="navbar-area">
+		<div class="techmax-responsive-nav">
+			<div class="container">
+				<div class="techmax-responsive-menu">
+					<div class="logo">
+						<a href="index.html">
+							<img src="assets/img/logo.png" class="white-logo" alt="logo">
+							<img src="assets/img/logo-black.png" class="black-logo" alt="logo">
+						</a>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="techmax-nav">
+			<div class="container">
+				<nav class="navbar navbar-expand-md navbar-light">
+					<a class="navbar-brand" href="index.html">
+						<img src="assets/img/logo.png" class="white-logo" alt="logo">
+						<img src="assets/img/logo-black.png" class="black-logo" alt="logo">
+					</a>
+					<div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent" style="display: block;">
+						<ul class="navbar-nav">
+							<li class="nav-item"> 
+								<a href="product.html" class="nav-link">Product</a>
+							</li>
+							<li class="nav-item">
+								<a href="pricing.html" class="nav-link">Pricing</a>
+							</li>
+							<li class="nav-item">
+								<a href="about.html" class="nav-link">Company</a>
+							</li>
+							<li class="nav-item">
+								<a href="#" class="nav-link">Industries  <i class="fas fa-chevron-down"></i></a>
+								<ul class="dropdown-menu">
+									<li class="nav-item"> 
+										<a href="mortgage-refinance.html" class="nav-link">Mortgage Refinance</a>
+									</li>
+									<li class="nav-item"> 
+										<a href="personal-loans.html" class="nav-link">Personal Loans</a>
+									</li>
+									<li class="nav-item"> 
+										<a href="solar.html" class="nav-link">Solar</a>
+									</li>
+									<li class="nav-item"> 
+										<a href="home-services.html" class="nav-link">Home Services</a>
+									</li>
+									<li class="nav-item"> 
+										<a href="homeowners-insurance.html" class="nav-link">Homeowners Insurance</a>
+									</li>
+									<li class="nav-item"> 
+										<a href="real-estate.html" class="nav-link">Real Estate</a>
+									</li>
+								</ul>
+							</li>
+							<li class="nav-item"> 
+								<a href="#" class="nav-link">Resources <i class="fas fa-chevron-down"></i></a>
+								<ul class="dropdown-menu">
+									<li class="nav-item">
+										<a href="tutorials.html" class="nav-link">Tutorials</a>
+									</li>
+									<li class="nav-item">
+										<a href="best-practices.html" class="nav-link">Best Practices</a>
+									</li>
+									<li class="nav-item">
+										<a href="faq.html" class="nav-link">FAQs</a>
+									</li>
+									<li class="nav-item">
+										<a href="training-support.html" class="nav-link">Training and Support</a>
+									</li>
+									<li class="nav-item">
+										<a href="integrated-dialer.html" class="nav-link">Integrated Dialer</a>
+									</li>
+								</ul>
+							</li>
+						</ul>
+						<div class="other-option">
+							<div class="nav-item">
+								<a href="#" class="nav-link" style="color: #fff">Log In</a>
+							</div>
+							<a class="default-btn" href="#">Register <span></span></a>
+						</div>
+					</div>
+				</nav>
+			</div>
+		</div>
+	</div>
 
 	
 
@@ -439,282 +345,115 @@
 
 	
 
-	<!-- Start Footer Section -->
-
 	<section class="footer-area section-padding">
-
 		<div class="container">
-
 			<div class="row">
-
 				<div class="col-lg-4 col-md-6 col-sm-6">
-
 					<div class="single-footer-widget">
-
 						<div class="footer-heading">
-
 							<h3>About Us</h3>
-
 						</div>
-
 						<p>Mega Pipelines is your extraordinary partner to help you grow your sales pipeline without growing your marketing budget.</p>
-
 						<ul class="footer-social">
-
 							<li>
-
-								<a href="#"> <i class="fab fa-facebook-f"></i>
-
-								</a>
-
+								<a href="#"><i class="fab fa-facebook-f"></i></a>
 							</li>
-
 							<li>
-
-								<a href="#"> <i class="fab fa-twitter"></i>
-
-								</a>
-
+								<a href="#"><i class="fab fa-twitter"></i></a>
 							</li>
-
 							<li>
-
-								<a href="#"> <i class="fab fa-pinterest"></i>
-
-								</a>
-
+								<a href="#"><i class="fab fa-pinterest"></i></a>
 							</li>
-
 							<li>
-
-								<a href="#"> <i class="fab fa-linkedin"></i>
-
-								</a>
-
+								<a href="#"><i class="fab fa-linkedin"></i></a>
 							</li>
-
 						</ul>
-
 					</div>
-
 				</div>
-
 				<div class="col-lg-2 col-md-6 col-sm-6">
-
 					<div class="single-footer-widget">
-
 						<div class="footer-heading">
-
 							<h3>Discover</h3>
-
 						</div>
-
 						<ul class="footer-quick-links">
-
-							<li> <a href="#">Product</a></li>
-
-							<li> <a href="#">Pricing</a></li>
-
-							<li> <a href="#">FAQs</a></li>
-
-							<li> <a href="#">Industries</a></li>
-
-							<li> <a href="#">Register or Sign In</a></li>
-
+							<li><a href="product.html">Product</a></li>
+							<li><a href="pricing.html">Pricing</a></li>
+							<li><a href="faqs.html">FAQs</a></li>
+							<li><a href="#">Industries</a></li>
+							<li><a href="#">Register or Sign In</a></li>
 						</ul>
-
 					</div>
-
 				</div>
-
 				<div class="col-lg-2 col-md-6 col-sm-6">
-
 					<div class="single-footer-widget">
-
 						<div class="footer-heading">
-
 							<h3>Quick Links</h3>
-
 						</div>
-
 						<ul class="footer-quick-links">
-
-							<li><a href="">Submit a Ticket</a></li>
-
-							<li><a href="">Training and Support</a></li>
-
-							<li><a href="">Contact Us</a></li>
-
-							<li><a href="">Privacy Policy</a></li>
-
-							<li><a href="">Terms and Conditions</a></li>
-
+							<li><a href="#">Submit a Ticket</a></li>
+							<li><a href="training-support.html">Training and Support</a></li>
+							<li><a href="contact.html">Contact Us</a></li>
+							<li><a href="privacy-policy.html">Privacy Policy</a></li>
+							<li><a href="terms-condition.html">Terms and Conditions</a></li>
 						</ul>
-
 					</div>
-
 				</div>
-
 				<div class="col-lg-4 col-md-6 col-sm-6">
-
 					<div class="single-footer-widget">
-
 						<div class="footer-heading">
-
 							<h3>Contact Information</h3>
-
 						</div>
-
 						<div class="footer-info-contact">
-
 							<span><strong>Phone:</strong> <a href="tel:8559796342">(855) 979-MEGA (6342)</a></span>
-
 						</div>
-
 						<div class="footer-info-contact">
-
 							<span><strong>Email:</strong> <a href="mailto:sales@megapipelines.com">sales@megapipelines.com</a></span>
 
 						</div>
-
 						<div class="footer-info-contact">
-
 							<span><strong>Address:</strong> 360 Central Avenue First Central Tower, Suite 800, St. Petersburg, FL 33701, United States</span>
 
 						</div>
-
-						<!-- Start Subscribe Area -->
-
 						<form class="newsletter-form">
-
 							<input type="email" class="input-newsletter" placeholder="Enter your email" name="EMAIL" required autocomplete="off">
-
 							<button class="default-btn" type="submit">Subscribe <span></span></button>
-
 						</form>
-
-						<!-- End Subscribe Area -->
-
 					</div>
-
 				</div>
-
 			</div>
-
 		</div>
-
 	</section>
-
-	<!-- End Footer Section -->
-
-	
-
-	<!-- Start Copy Right Section -->
-
 	<div class="copyright-area">
-
 		<div class="container">
-
 			<div class="row align-items-center">
-
 				<div class="col-lg-6 col-md-6">
-
-					<p> <i class="far fa-copyright"></i> 2023 Mega Pipelines LLC - All Rights Reserved.</p>
-
+					<p><i class="far fa-copyright"></i> 2023 Mega Pipelines LLC - All Rights Reserved.</p>
 				</div>
-
 				<div class="col-lg-6 col-md-6">
-
 					<ul>
-
-						<li> <a href="terms-condition.html">Terms & Conditions</a>
-
+						<li>
+							<a href="terms-condition.html">Terms & Conditions</a>
 						</li>
-
-						<li> <a href="privacy-policy.html">Privacy Policy</a>
-
+						<li>
+							<a href="privacy-policy.html">Privacy Policy</a>
 						</li>
-
 					</ul>
-
 				</div>
-
 			</div>
-
 		</div>
-
 	</div>
-
-	<!-- End Copy Right Section -->
-
-	
-
-	<!-- Start Go Top Section -->
-
 	<div class="go-top">
-
 		<i class="fas fa-chevron-up"></i>
-
 		<i class="fas fa-chevron-up"></i>
-
 	</div>
-
-	<!-- End Go Top Section -->
-
-	
-
-	<!-- jQuery Min JS -->
-
-	<script src="assets/js/jquery.min.js"></script>
-
-	<!-- Bootstrap Min JS -->
-
-	<script src="assets/js/bootstrap.min.js"></script>
-
-	<!-- MeanMenu JS  -->
-
-	<script src="assets/js/jquery.meanmenu.js"></script>
-
-	<!-- Appear Min JS -->
-
-	<script src="assets/js/jquery.appear.min.js"></script>
-
-	<!-- CounterUp Min JS -->
-
-	<script src="assets/js/jquery.waypoints.min.js"></script>
-
-	<script src="assets/js/jquery.counterup.min.js"></script>
-
-	<!-- Owl Carousel Min JS -->
-
-	<script src="assets/js/owl.carousel.min.js"></script>
-
-	<!-- Gmap3 Min JS -->
-
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDJ_mGhah8EApmFiXYYBsdBuygviP2M2EE"></script>
-
-	<script src="assets/js/gmap3.min.js"></script>
-
-	<!-- Google Map JS -->
-
-	<script src="assets/js/map.js"></script>
-
-	<!-- WOW Min JS -->
-
-	<script src="assets/js/wow.min.js"></script>
-
-	<!-- Ajax Mail JS -->
-
-	<script src="assets/js/ajax.mail.js"></script>
-
-	<!-- Main JS -->
-
-	<script src="assets/js/main.js"></script>
-
-	
-
 </body>
-
-
-
+<script src="assets/js/jquery.min.js"></script>
+<script src="assets/js/bootstrap.min.js"></script>
+<script src="assets/js/jquery.meanmenu.js"></script>
+<script src="assets/js/jquery.appear.min.js"></script>
+<script src="assets/js/jquery.waypoints.min.js"></script>
+<script src="assets/js/jquery.counterup.min.js"></script>
+<script src="assets/js/owl.carousel.min.js"></script>
+<script src="assets/js/wow.min.js"></script>
+<script src="assets/js/main.js"></script>
 </html>
