--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 				<div class="techmax-responsive-menu">
 					<div class="logo">
 						<a href="index.html">
-							<img src="assets/img/logo-black.png" class="white-logo" alt="logo">
-							<img src="assets/img/logo-black.png" class="black-logo" alt="logo">
+							<img src="assets/img/logo.jpeg" height="80px" class="white-logo" alt="logo">
+							<img src="assets/img/logo-black.jpeg" height="80px" class="black-logo" alt="logo">
 						</a>
 					</div>
 				</div>
@@ -56,8 +56,8 @@
 			<div class="container">
 				<nav class="navbar navbar-expand-md navbar-light">
 					<a class="navbar-brand" href="index.html">
-						<img src="assets/img/logo-black.png" class="white-logo" alt="logo">
-						<img src="assets/img/logo-black.png" class="black-logo" alt="logo">
+						<img src="assets/img/logo.jpeg" height="80px" class="white-logo" alt="logo">
+						<img src="assets/img/logo-black.jpeg" height="80px" class="black-logo" alt="logo">
 					</a>
 					<div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
 						<ul class="navbar-nav">
@@ -116,7 +116,7 @@
 						</ul>
 						<div class="other-option">
 							<div class="nav-item">
-								<a href="#" class="nav-link" style="color: #fff">Log In</a>
+								<a href="#" class="nav-link">Log In</a>
 							</div>
 							<a class="default-btn" href="#">Register <span></span></a>
 						</div>
