--- a/company.html
+++ b/company.html
@@ -9,11 +9,11 @@
     <meta name="description" content="Mega Pipelines is the best sales resource, providing unlimited sales leads for mortgage, solar, insurance and home services.  Why pay per opportunity when you can have unlimited sales at your fingertips.">
     <link rel="canonical" href="https://megapipelines.com/">
     <link rel="icon" type="image/ico" href="assets/img/favicon.ico">
-    <title>About Us</title>
+    <title>Company</title>
     <meta property="og:url" content="https://megapipelines.com/">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Mega Pipelines">
-    <meta property="og:title" content="About Us">
+    <meta property="og:title" content="Company">
     <meta property="og:description" content="Mega Pipelines is the best sales resource, providing unlimited sales leads for mortgage, solar, insurance and home services.  Why pay per opportunity when you can have unlimited sales at your fingertips.">
     <meta property="og:image" content="">
 	<link href="https://fonts.googleapis.com/css2?family=Cabin:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -139,13 +139,13 @@
 
 					<div class="page-title-content">
 
-						<h2>About Us</h2>
+						<h2>Company</h2>
 
 						<ul>
 
 							<li><a href="index.html">Home</a></li>
 
-							<li>About Us</li>
+							<li>Company</li>
 
 						</ul>
 
