--- a/faq.html
+++ b/faq.html
@@ -184,9 +184,9 @@
 
 								<a class="accordion-title active" href="javascript:void(0)"> <i class="fa fa-caret-down"></i>
 
-								Can I change the FAQ expand icon?</a>
+								How do we do this?</a>
 
-								<p class="accordion-content show">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary.</p>
+								<p class="accordion-content show">We started by changing the lead game.  Instead of charging per lead or per click or some other metric—we went as far as making all of our leads unlimitedly available to you to call for a low flat price.</p>
 
 							</li>
 
@@ -194,69 +194,219 @@
 
 								<a class="accordion-title" href="javascript:void(0)"> <i class="fa fa-caret-down"></i>
 
-								Can I change the app’s text direction?</a>
+								What industries does Mega Pipelines offer leads in?</a>
 
-								<p class="accordion-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary.</p>
-
-							</li>
-
-							<li class="accordion-item">
-
-								<a class="accordion-title" href="javascript:void(0)"> <i class="fa fa-caret-down"></i> 
-
-								Is there a search option available?</a>
-
-								<p class="accordion-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary.</p>
+								<p class="accordion-content">At launch we are offering only mortgage refinance leads, however we are in the process of adding real estate/home purchase leads, insurance leads, solar panel install leads, and other home services leads.</p>
 
 							</li>
 
 							<li class="accordion-item">
 
-								<a class="accordion-title" href="javascript:void(0)"> <i class="fa fa-caret-down"></i> 
+								<a class="accordion-title" href="javascript:void(0)"> <i class="fa fa-caret-down"></i>
 
-								Can I change the FAQ’s opening behavior?</a>
+								How are the leads created?</a>
 
-								<p class="accordion-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary.</p>
-
-							</li>
-
-							<li class="accordion-item">
-
-								<a class="accordion-title" href="javascript:void(0)"> <i class="fa fa-caret-down"></i> 
-
-								Can I change the layout of the FAQs?</a>
-
-								<p class="accordion-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary.</p>
+								<p class="accordion-content">We have confidential partnerships with many lead generators that provide their leads to Mega Pipelines to sell in the secondary market.  These leads vary from being only minutes old, to as aged as 60 days.  Most of our customers, and our data demonstrates, the leads older than 20 days are actually the best—because the customers have had time to think about their next steps, and have had time for most primary phone calls to die down, and they understand more about what they want to accomplish—making your contact more timely.</p>
 
 							</li>
 
 							<li class="accordion-item">
 
-								<a class="accordion-title" href="javascript:void(0)"> <i class="fa fa-caret-down"></i> 
+								<a class="accordion-title" href="javascript:void(0)"> <i class="fa fa-caret-down"></i>
 
-								Is the FAQ app GDPR compliant?</a>
+								Are the leads opt-in?</a>
 
-								<p class="accordion-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary.</p>
-
-							</li>
-
-							<li class="accordion-item">
-
-								<a class="accordion-title" href="javascript:void(0)"> <i class="fa fa-caret-down"></i> 
-
-								Is it hard to embed your FAQ app?</a>
-
-								<p class="accordion-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary.</p>
+								<p class="accordion-content">Yes.  All of the leads loaded into Mega Pipelines have opted in recently for an inquiry related to the reason you are calling them.  This way you can feel certain you are contacting someone about something they have previously shown some interest.</p>
 
 							</li>
 
 							<li class="accordion-item">
 
-								<a class="accordion-title" href="javascript:void(0)"> <i class="fa fa-caret-down"></i> 
+								<a class="accordion-title" href="javascript:void(0)"> <i class="fa fa-caret-down"></i>
 
-								I have a feature request, how can I share it?</a>
+								What is the cost?</a>
 
-								<p class="accordion-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary.</p>
+								<p class="accordion-content">The cost of the program depends on if you have an Individual, Team, or Enterprise account, the number of users you have, and if you pay for a monthly, quarterly, or annual subscription to the Mega Pipelines service.  See our pricing page to see what kind of program makes sense for you and your business.</p>
+
+							</li>
+
+							<li class="accordion-item">
+
+								<a class="accordion-title" href="javascript:void(0)"> <i class="fa fa-caret-down"></i>
+
+								Can leads be removed from the system?  How can I give feedback on a lead?</a>
+
+								<p class="accordion-content">Within the system leads are removed after they have been contacted by 3 users, or removed from your queue after you have called on a lead 3 times.  On each lead, you can provide feedback on the lead by clicking on any of the indicators next to the record.</p>
+
+							</li>
+
+							<li class="accordion-item">
+
+								<a class="accordion-title" href="javascript:void(0)"> <i class="fa fa-caret-down"></i>
+
+								What kind of quality are these leads?</a>
+
+								<p class="accordion-content">Before we load our leads in Mega Pipelines, we put every lead through a multi-pronged check against public property records, telephony ownership records, and assorted do-not-call lists.</p>
+
+							</li>
+
+							<li class="accordion-item">
+
+								<a class="accordion-title" href="javascript:void(0)"> <i class="fa fa-caret-down"></i>
+
+								Is there a free trial to know the data is good?</a>
+
+								<p class="accordion-content">First 50 phone calls or first 5 days, per account, whichever comes first.</p>
+
+							</li>
+
+							<li class="accordion-item">
+
+								<a class="accordion-title" href="javascript:void(0)"> <i class="fa fa-caret-down"></i>
+
+								Do you provide someone to do the telemarketing or calling for me?</a>
+
+								<p class="accordion-content">Currently in our platform we do not provide this service, however we suggest you use a service like Upwork, Fiverr, or some other independent contractor service to interview and find someone who you think fits your budget and requirements to do the calling.  You can coach them according to your needs, and devise your own script to give you an advantage.  We suggest searching online for effective script strategies to help you stand out.</p>
+
+							</li>
+
+							<li class="accordion-item">
+
+								<a class="accordion-title" href="javascript:void(0)"> <i class="fa fa-caret-down"></i>
+
+								Do I need a dialer?</a>
+
+								<p class="accordion-content">Nope.  We have the dialer integrated into our technology platform and as part of our subscription, so there is no need to hassle with technology license fees, set up, or other configurations that make dialing complicated.</p>
+
+							</li>
+
+							<li class="accordion-item">
+
+								<a class="accordion-title" href="javascript:void(0)"> <i class="fa fa-caret-down"></i>
+
+								What if I don’t want to do the calling?</a>
+
+								<p class="accordion-content">Simply just assign someone as the “Dialer” within the Mega Pipelines system and you can operate as the administrator.  This allows you to manage the person doing the dialing by viewing how many leads were called per day, and how long those calls lasted.  You can set up a transfer process that they can hand off the calls, or notify you via email for customers that are ready to proceed.  We suggestion devising a script that will entice the customer to be transferred into you—with using a “rate quote” or a “cash out monthly payment plan” as the carrot to get them further into the conversation.</p>
+
+							</li>
+
+							<li class="accordion-item">
+
+								<a class="accordion-title" href="javascript:void(0)"> <i class="fa fa-caret-down"></i>
+
+								What phone number shows up to the customer when they are called?</a>
+
+								<p class="accordion-content">We will assign you a phone number, and we will let you specify what area code you want the phone number to be in.</p>
+
+							</li>
+
+							<li class="accordion-item">
+
+								<a class="accordion-title" href="javascript:void(0)"> <i class="fa fa-caret-down"></i>
+
+								Can I change my phone number after I’ve been assigned?</a>
+
+								<p class="accordion-content">Not at this time, but we are always working on new features that our customers request.</p>
+
+							</li>
+
+							<li class="accordion-item">
+
+								<a class="accordion-title" href="javascript:void(0)"> <i class="fa fa-caret-down"></i>
+
+								Can I save the leads I called so I can call them a second and third time?</a>
+
+								<p class="accordion-content">Yes.  After you have dialed a lead we move it to a separate queue, and from this queue you can continue to call the same lead 3 times before we expire the lead all together.  This is so customers do not become annoyed by your phone calls through our system.</p>
+
+							</li>
+
+							<li class="accordion-item">
+
+								<a class="accordion-title" href="javascript:void(0)"> <i class="fa fa-caret-down"></i>
+
+								What if I need a customer’s contact information?</a>
+
+								<p class="accordion-content">To enable our system to operate at a low cost, we cannot expose the customer’s personally identifying information, however we recommend that you ask the customer for their preferred contact information while speaking with them, and then you can contact the customer independent from the Mega Pipelines system.</p>
+
+							</li>
+
+							<li class="accordion-item">
+
+								<a class="accordion-title" href="javascript:void(0)"> <i class="fa fa-caret-down"></i>
+
+								How many times is a lead called by anyone using Mega Pipelines?</a>
+
+								<p class="accordion-content">We want to maintain quality leads for all of our customers and leads that are not fatigued.  To accomplish this, we only allow 3 accounts to call a lead before we remove it all together.</p>
+
+							</li>
+
+							<li class="accordion-item">
+
+								<a class="accordion-title" href="javascript:void(0)"> <i class="fa fa-caret-down"></i>
+
+								Can I filter through the leads to only call certain types?</a>
+
+								<p class="accordion-content">Yes.  We allow you to filter on a number of factors in the data. The amount of data available in any given niche is subject to availability and demand. The data we let you filter on is not from the lead, but from independent, high quality data sources, so you can rely on the information you see in the Mega Pipelines system.</p>
+
+							</li>
+
+							<li class="accordion-item">
+
+								<a class="accordion-title" href="javascript:void(0)"> <i class="fa fa-caret-down"></i>
+
+								Can I add more than 1 person dialing from my account?</a>
+
+								<p class="accordion-content">Yes.  An individual account can add as many Dialers as they wish, however there is a per Dialer.  Once you reached 5 Dialers, we suggest you contact us to upgrade to a Team account for a bulk seat subscription discount.</p>
+
+							</li>
+
+							<li class="accordion-item">
+
+								<a class="accordion-title" href="javascript:void(0)"> <i class="fa fa-caret-down"></i>
+
+								What discounts do you offer?</a>
+
+								<p class="accordion-content">At a minimum we charge monthly, however if you choose to pay quarterly or annually, we will discount your effective monthly cost.  Furthermore if you team up with others, or have 5 Dialers or more, contact us to be upgraded to a Team account.</p>
+
+							</li>
+
+							<li class="accordion-item">
+
+								<a class="accordion-title" href="javascript:void(0)"> <i class="fa fa-caret-down"></i>
+
+								How can I pay for this service?</a>
+
+								<p class="accordion-content">We charge your credit card on a monthly, quarterly or annual basis, pro-rating the first period according to your selected plan.  If you are buying on a team basis, we allow invoicing with payments made via bank transfer ACH or wire.  We will provision your account while we wait for the initial deposit to be made and once it is received, your account will become active.</p>
+
+							</li>
+
+							<li class="accordion-item">
+
+								<a class="accordion-title" href="javascript:void(0)"> <i class="fa fa-caret-down"></i>
+
+								What if someone calls me back, how does that work?</a>
+
+								<p class="accordion-content">Inbound calls will be automatically routed to your registered phone number in Mega Pipelines.  The caller ID displayed on your phone will be your outbound Mega Pipelines phone number so you know this is a sales opportunity.</p>
+
+							</li>
+
+							<li class="accordion-item">
+
+								<a class="accordion-title" href="javascript:void(0)"> <i class="fa fa-caret-down"></i>
+
+								Can I upgrade or downgrade my plan from a monthly plan to a quarterly plan or vice versa?</a>
+
+								<p class="accordion-content">Yes at the end of the current term.  Please contact us at <a href="mailto:support@megapipelines.com">support@megapipelines.com</a></p>
+
+							</li>
+
+							<li class="accordion-item">
+
+								<a class="accordion-title" href="javascript:void(0)"> <i class="fa fa-caret-down"></i>
+
+								What kind of performance can I expect from calling leads in Mega Pipelines?</a>
+
+								<p class="accordion-content">Performance varies on many factors outside of our control, however we have created a tool that helps you understand the possibilities and what kind of return you earn.</p>
 
 							</li>
 
