--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="mortgage, leads, unlimited, refinance, solar, sales, loans, pipeline">
     <meta name="description" content="Mega Pipelines is the best sales resource, providing unlimited sales leads for mortgage, solar, insurance and home services.  Why pay per opportunity when you can have unlimited sales at your fingertips.">
     <link rel="canonical" href="https://megapipelines.com/">
-    <link rel="icon" type="image/ico" href="assets/img/favicon.ico">
+    <link rel="icon" type="image/png" href="assets/img/favicon.png">
     <title>Mega Pipelines</title>
     <meta property="og:url" content="https://megapipelines.com/">
     <meta property="og:type" content="website">
@@ -45,7 +45,7 @@
 				<div class="techmax-responsive-menu">
 					<div class="logo">
 						<a href="index.html">
-							<img src="assets/img/logo.png" class="white-logo" alt="logo">
+							<img src="assets/img/logo-black.png" class="white-logo" alt="logo">
 							<img src="assets/img/logo-black.png" class="black-logo" alt="logo">
 						</a>
 					</div>
@@ -56,7 +56,7 @@
 			<div class="container">
 				<nav class="navbar navbar-expand-md navbar-light">
 					<a class="navbar-brand" href="index.html">
-						<img src="assets/img/logo.png" class="white-logo" alt="logo">
+						<img src="assets/img/logo-black.png" class="white-logo" alt="logo">
 						<img src="assets/img/logo-black.png" class="black-logo" alt="logo">
 					</a>
 					<div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
@@ -108,16 +108,16 @@
 									<li class="nav-item">
 										<a href="training-support.html" class="nav-link">Training and Support</a>
 									</li>
-									<li class="nav-item">
+ 									<li class="nav-item">
 										<a href="integrated-dialer.html" class="nav-link">Integrated Dialer</a>
 									</li>
 								</ul>
 							</li>
+							<li class="nav-item">
+								<a href="#" class="nav-link">Login</a>
+							</li>
 						</ul>
 						<div class="other-option">
-							<div class="nav-item">
-								<a href="#" class="nav-link">Log In</a>
-							</div>
 							<a class="default-btn" href="#">Register <span></span></a>
 						</div>
 					</div>
