--- a/roi-calculator.html
+++ b/roi-calculator.html
@@ -9,11 +9,11 @@
     <meta name="description" content="Mega Pipelines is the best sales resource, providing unlimited sales leads for mortgage, solar, insurance and home services.  Why pay per opportunity when you can have unlimited sales at your fingertips.">
     <link rel="canonical" href="https://megapipelines.com/">
     <link rel="icon" type="image/png" href="assets/img/favicon.png">
-    <title>Integrated Dialer</title>
+    <title>ROI Calculator</title>
     <meta property="og:url" content="https://megapipelines.com/">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Mega Pipelines">
-    <meta property="og:title" content="Integrated Dialer">
+    <meta property="og:title" content="ROI Calculator">
     <meta property="og:description" content="Mega Pipelines is the best sales resource, providing unlimited sales leads for mortgage, solar, insurance and home services.  Why pay per opportunity when you can have unlimited sales at your fingertips.">
     <meta property="og:image" content="">
 	<link href="https://fonts.googleapis.com/css2?family=Cabin:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -126,92 +126,21 @@
 			</div>
 		</div>
 	</div>
-
-	
-
-	<!-- Start Page Title Area -->
-
-	<div class="page-title-area item-bg1">
-
+	<div class="page-title-area">
 		<div class="d-table">
-
 			<div class="d-table-cell">
-
 				<div class="container">
-
 					<div class="page-title-content">
-
-						<h2>Integrated Dialer</h2>
-
+						<h2>ROI Calculator</h2>
 						<ul>
-
 							<li><a href="index.html">Home</a></li>
-
-							<li>Integrated Dialer</li>
-
+							<li>ROI Calculator</li>
 						</ul>
-
 					</div>
-
 				</div>
-
 			</div>
-
 		</div>
-
 	</div>
-
-	<!-- End Page Title Area -->
-
-	
-
-	<!-- Start Services Details Area -->
-
-	<section class="services-details-area ptb-100">
-
-		<div class="container">
-
-			<div class="services-details-overview">
-
-				<div class="row align-items-center">
-
-					<div class="col-lg-12 col-md-12">
-
-						<div class="services-step-image">
-
-							<img src="assets/img/services-details/services-details-1.jpg" alt="image">
-
-						</div>
-
-						<div class="services-step-wrapper">
-
-							<div class="services-step-title">
-
-								<h2>Our Integrated Dialer</h2>
-
-							</div>
-
-							<div class="services-step-content">
-
-								<p>Our integrated dialer is one of the key resources that make Mega Pipelines better than if you tried to build your own calling system.  We have over 10 years of dialer implementation and phone number management experience that we offer for free as part of using the Mega Pipelines service.  Upon signing up for a Mega Pipelines account, you can select from our series of phone numbers to choose how you want to market yourself–and from there, we implement all the necessary magic to make sure your phone calls are not blocked or flagged as spam to the customers you are calling.   In this era of telecommunications and calling, it is easy to make a mistake implementing a dialer, and we take out all of the challenges, and further, are constantly implementing changes to make sure our customers are performing at peak levels when they use our integrated dialer when calling customers via Mega Pipelines.</p>
-
-							</div>
-
-						</div>
-
-					</div>
-
-				</div>
-
-			</div>
-
-		</div>
-
-	</section>
-
-	<!-- End Services Details Area -->
-
-	
 
 	<section class="footer-area section-padding">
 		<div class="container">
