--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="mortgage, leads, unlimited, refinance, solar, sales, loans, pipeline">
     <meta name="description" content="Mega Pipelines is the best sales resource, providing unlimited sales leads for mortgage, solar, insurance and home services.  Why pay per opportunity when you can have unlimited sales at your fingertips.">
     <link rel="canonical" href="https://megapipelines.com/">
-    <link rel="icon" type="image/ico" href="assets/img/favicon.ico">
+    <link rel="icon" type="image/png" href="assets/img/favicon.png">
     <title>Privacy Policy</title>
     <meta property="og:url" content="https://megapipelines.com/">
     <meta property="og:type" content="website">
@@ -108,16 +108,17 @@
 									<li class="nav-item">
 										<a href="training-support.html" class="nav-link">Training and Support</a>
 									</li>
-									<li class="nav-item">
+ 									<li class="nav-item">
 										<a href="integrated-dialer.html" class="nav-link">Integrated Dialer</a>
 									</li>
 								</ul>
 							</li>
+							<li class="nav-item">
+								<a href="#" class="nav-link">Login</a>
+							</li>
 						</ul>
 						<div class="other-option">
-							<div class="nav-item">
-								<a href="#" class="nav-link" style="color: #fff">Log In</a>
-							</div>
+ 
 							<a class="default-btn" href="#">Register <span></span></a>
 						</div>
 					</div>
