--- a/contact.html
+++ b/contact.html
@@ -455,6 +455,10 @@
 <script src="assets/js/jquery.waypoints.min.js"></script>
 <script src="assets/js/jquery.counterup.min.js"></script>
 <script src="assets/js/owl.carousel.min.js"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDJ_mGhah8EApmFiXYYBsdBuygviP2M2EE"></script>
+<script src="assets/js/gmap3.min.js"></script>
+<script src="assets/js/map.js"></script>
 <script src="assets/js/wow.min.js"></script>
+<script src="assets/js/ajax.mail.js"></script>
 <script src="assets/js/main.js"></script>
 </html>
