New header and images removed

--- a/pricing.html
+++ b/pricing.html
@@ -45,8 +45,8 @@
 				<div class="techmax-responsive-menu">
 					<div class="logo">
 						<a href="index.html">
-							<img src="assets/img/logo.png" class="white-logo" alt="logo">
-							<img src="assets/img/logo-black.png" class="black-logo" alt="logo">
+							<img src="assets/img/logo.svg" class="white-logo" alt="logo">
+							<img src="assets/img/logo-black.svg" class="black-logo" alt="logo">
 						</a>
 					</div>
 				</div>
@@ -56,8 +56,8 @@
 			<div class="container">
 				<nav class="navbar navbar-expand-md navbar-light">
 					<a class="navbar-brand" href="index.html">
-						<img src="assets/img/logo.png" class="white-logo" alt="logo">
-						<img src="assets/img/logo-black.png" class="black-logo" alt="logo">
+						<img src="assets/img/logo.svg" class="white-logo" alt="logo">
+						<img src="assets/img/logo-black.svg" class="black-logo" alt="logo">
 					</a>
 					<div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent" style="display: block;">
 						<ul class="navbar-nav">
@@ -160,7 +160,7 @@
 
 							<div class="price-name">
 
-								<h3>Startup</h3>
+								<h3>INDIVIDUAL</h3>
 
 								<span class="price-small-text">$</span>
 
