--- a/contact.html
+++ b/contact.html
@@ -68,7 +68,7 @@
 								<a href="pricing.html" class="nav-link">Pricing</a>
 							</li>
 							<li class="nav-item">
-								<a href="about.html" class="nav-link">Company</a>
+								<a href="company.html" class="nav-link">Company</a>
 							</li>
 							<li class="nav-item">
 								<a href="#" class="nav-link">Industries  <i class="fas fa-chevron-down"></i></a>
@@ -77,7 +77,7 @@
 										<a href="mortgage-refinance.html" class="nav-link">Mortgage Refinance</a>
 									</li>
 									<li class="nav-item"> 
-										<a href="personal-loans.html" class="nav-link">Personal Loans</a>
+										<a href="personal-loan.html" class="nav-link">Personal Loan</a>
 									</li>
 									<li class="nav-item"> 
 										<a href="solar.html" class="nav-link">Solar</a>
