--- a/personal-loan.html
+++ b/personal-loan.html
@@ -9,11 +9,11 @@
     <meta name="description" content="Mega Pipelines is the best sales resource, providing unlimited sales leads for mortgage, solar, insurance and home services.  Why pay per opportunity when you can have unlimited sales at your fingertips.">
     <link rel="canonical" href="https://megapipelines.com/">
     <link rel="icon" type="image/png" href="assets/img/favicon.png">
-    <title>Personal Loans</title>
+    <title>Personal Loan</title>
     <meta property="og:url" content="https://megapipelines.com/">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Mega Pipelines">
-    <meta property="og:title" content="Personal Loans">
+    <meta property="og:title" content="Personal Loan">
     <meta property="og:description" content="Mega Pipelines is the best sales resource, providing unlimited sales leads for mortgage, solar, insurance and home services.  Why pay per opportunity when you can have unlimited sales at your fingertips.">
     <meta property="og:image" content="">
 	<link href="https://fonts.googleapis.com/css2?family=Cabin:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -68,7 +68,7 @@
 								<a href="pricing.html" class="nav-link">Pricing</a>
 							</li>
 							<li class="nav-item">
-								<a href="about.html" class="nav-link">Company</a>
+								<a href="company.html" class="nav-link">Company</a>
 							</li>
 							<li class="nav-item">
 								<a href="#" class="nav-link">Industries  <i class="fas fa-chevron-down"></i></a>
@@ -77,7 +77,7 @@
 										<a href="mortgage-refinance.html" class="nav-link">Mortgage Refinance</a>
 									</li>
 									<li class="nav-item"> 
-										<a href="personal-loans.html" class="nav-link">Personal Loans</a>
+										<a href="personal-loan.html" class="nav-link">Personal Loan</a>
 									</li>
 									<li class="nav-item"> 
 										<a href="solar.html" class="nav-link">Solar</a>
@@ -131,10 +131,10 @@
 			<div class="d-table-cell">
 				<div class="container">
 					<div class="page-title-content">
-						<h2>Personal Loans</h2>
+						<h2>Personal Loan</h2>
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li>Personal Loans</li>
+							<li>Personal Loan</li>
 						</ul>
 					</div>
 				</div>
